ナビゲーションバーを追加

--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -13,6 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+div#root {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
